# solshitector

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
ipfs/: ipfs_entrypoint.sh
scripts/: ipfs_entrypoint.sh  ipfs_setup_server_connection.sh  ipfs_show_peers.sh  ipfs_test.sh  run_main.sh  run_scratch_v1.sh  run_scratch_v2.sh  test_ipfs.sh
src/: lib.rs
src/scratches/: mod.rs
src/scratches/scratch_v1_ipfs_block_downloader/: main.rs  mod.rs
src/scratches/scratch_v2_hello_world/: main.rs
