[package]
name = "solshitector"
version = "0.1.0"
edition = "2021"
default-run = "solshitector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.12.0"
solana-sdk = "1.17"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
structopt = "0.3"

[[bin]]
name = "scratch_v1_ipfs_block_downloader"
path = "src/scratches/scratch_v1_ipfs_block_downloader/main.rs"
